--- a/plugin.xml
+++ b/plugin.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	id="cordova-plugin-eddystone"
-	version="1.3.0">
-
+	id="cordova-plugin-its-eddystone"
+	version="1.0.0">
 	<name>Eddystone</name>
-	<description>Cordova/PhoneGap plugin for Eddystone beacons.</description>
-	<license>Apache 2.0</license>
-	<keywords>Eddystone, Beacons</keywords>
+	<description>Cordova plugin for Eddystone</description>
+	<author>quentin.fung@hku.hk</author>
+  <license>Apache 2.0</license>
+  <keywords>cordova,eddystone,beacon,android,ios,plugin</keywords>
 
 	<js-module src="js/eddystone-plugin.js" name="eddystoneplugin">
-		<clobbers target="evothings.eddystone" />
+		<clobbers target="its.eddystone" />
 	</js-module>
 
 	<dependency id="cordova-plugin-ble" />
